--- a/practice/sesson 01/vd1.html
+++ b/practice/sesson 01/vd1.html
@@ -7,6 +7,22 @@
     <title>Title 1</title>
   </head>
   <body>
-    <img src="./jisoo.jpg" width="460" height="720" />
+    <div>
+      <h1>Hello World</h1>
+      <h2>Heading2</h2>
+      <h3>Heading3</h3>
+      <p>Hello World</p>
+      <span>Hello World</span>
+      <a href="">Link</a>
+      <span>Hello World</span>
+    </div>
+    <ul>
+        <li>a1</li>
+        <li>a2</li>
+    </ul>
+    <ol>
+        <li>a1</li>
+        <li>a2</li>
+    </ol>
   </body>
 </html>
