--- a/homework/sesson 02/Bai1.html
+++ b/homework/sesson 02/Bai1.html
@@ -30,7 +30,7 @@
         tuyển dụng hiện nay đã thay đổi rất nhiều, nhà tuyển dụng quan tâm nhiều hơn về cách xử lý công việc của các lập
         trình viên, chứ không phải nhìn vào những gì anh ta đã làm trong quá khứ. Vậy thì, làm thế nào để bạn đáp ứng
         được các yêu cầu và làm cho mình được chú ý tới?</p>
-    <img style="margin-left: auto; margin-right:auto; display: block;" src="./b1.webp">
+    <img style="margin-left: auto; margin-right:auto; display: block;" src="./Image/b1.webp">
     <p>Để nhận được sự chú ý, bạn cần phải bắt đầu quảng bá các kỹ năng và các dự án Java của bạn. Có rất nhiều nền tảng
         để bạn có thể làm điều này. Ví dụ như trang web Livecoding.tv là một lựa chọn phù hợp, nơi bạn có thể quảng bá
         và xây dựng portfolio của mình cho thị trường freelancer. Không chỉ thể hiện kỹ năng của mình đến những người
