--- a/homework/sesson 02/Bai3part2.html
+++ b/homework/sesson 02/Bai3part2.html
@@ -17,7 +17,7 @@
     <h2>Are you Austria's best photographer?</h2>
     <p>By entering any of the ten Open categories of the 2017 Sony World Photography Awards, your images are automatically entered into the <strong>Austria National Award</strong>, increasing your chances to win.</p>
     <p>Please note: only those with <Strong>Austrian</Strong> nationality will be eligible for this award.</p>
-    <h3 style="color: rgb(163, 163, 89);">Enter the Open competition</h3>
+    <a style="color: rgb(155, 155, 69);" href="https://www.worldphoto.org/de/sony-world-photography-awads-2018/open">Enter the Open competition</a><br/><br/>
     <i>Entries close: January 5th, 2017 11:59pm GTM</i>
 </body>
 
