--- a/homework/sesson 02/base_layout_2.html
+++ b/homework/sesson 02/base_layout_2.html
@@ -23,7 +23,7 @@
             color: white;
             display: flex;
             justify-content: center;
-            align-items: center
+            align-items: center;
         }
 
         .content {
