--- a/practice/sesson 03/home.html
+++ b/practice/sesson 03/home.html
@@ -6,26 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Document</title>
     <link rel="stylesheet" href="/AEB32-Tungnt/bootstrap-5.2.3-dist/css/bootstrap.min.css" />
-    <style>
-        header {
-            background-color: #ccc;
-        }
-
-        img {
-            width: 450px;
-            height: 450px;
-            object-fit: contain;
-        }
-        footer {
-            background-color: #ccc;
-            font-size: 0.65em;
-        }
-    </style>
+    <link rel="stylesheet" href="/AEB32-Tungnt/CSS/home.css">
+    <link rel="stylesheet" href="/AEB32-Tungnt/CSS/common.css">
 </head>
 
 <body>
-    <header class="bg-ccc p-3">
-        <h1>The Pulpit Rock</h1>
+    <header class="bg-ccc p-3 rounded-3">
+        <div>
+            <a href="./home.html" target="_top" class="active">Home</a>
+            <a href="./list.html" target="_top">List</a>
+            <a href="./form.html" target="_top">Form</a>
+        </div>
     </header>
     <div class="row p-4" p-3>
         <div class="col-12 col-md-3 col-content">
@@ -47,7 +38,7 @@
                 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="./image/vd2.avif" class="d-block w-100" alt="...">
+                            <img src="/AEB32-Tungnt/practice/sesson 04/image/vd2.avif" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
                             <img src="/AEB32-Tungnt/homework/sesson 03/image/forgetabouther.jpg" class="d-block w-100"
@@ -84,7 +75,7 @@
             </div>
         </div>
     </div>
-    <footer class="bg-ccc text-center">
+    <footer class="bg-ccc text-center bg-secondary">
         <p>This web page is a part of a demonstration of fluid web design made by www.w3schools.com. Resize the browser
             window to see the content response to the resizing.</p>
     </footer>
