--- a/practice/sesson 03/list.html
+++ b/practice/sesson 03/list.html
@@ -19,59 +19,22 @@
             <a href="./form.html" target="_top">Form</a>
         </div>
     </header>
-    <div class="div_table w-50">
+    <!-- <div>
         <table class="w-100">
-            <thead">
+            <thead>
                 <th>ID</th>
                 <td>Name</td>
                 <th>Function</th>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <th>Điện thoại</th>
-                        <td>
-                            <button>Details</button>
-                            <button>Delete</button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <th>Laptop</th>
-                        <td>
-                            <button>Details</button>
-                            <button>Delete</button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <th>Bàn phím</th>
-                        <td>
-                            <button>Details</button>
-                            <button>Delete</button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>4</td>
-                        <th>Chuột</th>
-                        <td>
-                            <button>Details</button>
-                            <button>Delete</button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>5</td>
-                        <th>Tai nghe</th>
-                        <td>
-                            <button>Details</button>
-                            <button>Delete</button>
-                        </td>
-                    </tr>
-                </tbody>
+            </thead>
+            <tbody id="tbody__user">
+
+            </tbody>
         </table>
-    </div>
+    </div> -->
+    <div class="d-flex justify-content-around flex-wrap" id="div_content"></div>
     <script src="/AEB32-Tungnt/bootstrap-5.2.3-dist/umd/popper.min.js"></script>
     <script src="/AEB32-Tungnt/bootstrap-5.2.3-dist/js/bootstrap.min.js"></script>
+    <script src="../sesson 08/js/list.js"></script>
 </body>
 
 </html>
