--- a/practice/web/list.html
+++ b/practice/web/list.html
@@ -37,7 +37,7 @@
     <!-- <div class="d-flex justify-content-around flex-wrap" id="div_content"></div> -->
     <script src="/AEB32-Tungnt/bootstrap-5.2.3-dist/umd/popper.min.js"></script>
     <script src="/AEB32-Tungnt/bootstrap-5.2.3-dist/js/bootstrap.min.js"></script>
-    <script src="../web/list.js"></script>
+    <script src="./list.js"></script>
 </body>
 
 </html>
