--- a/practice/web/list.html
+++ b/practice/web/list.html
@@ -2,42 +2,43 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/AEB32-Tungnt/bootstrap-5.2.3-dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/AEB32-Tungnt/CSS/list.css">
-    <link rel="stylesheet" href="/AEB32-Tungnt/CSS/common.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="/AEB32-Tungnt/bootstrap-5.2.3-dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="/AEB32-Tungnt/CSS/list.css">
+  <link rel="stylesheet" href="/AEB32-Tungnt/CSS/common.css">
 </head>
 
 <body>
-    <header class="bg-ccc p-3 rounded-3">
-        <div>
-            <a href="./home.html" target="_top">Home</a>
-            <a href="./list.html" target="_top" class="active">List</a>
-            <a href="./form.html" target="_top">Form</a>
-        </div>
-    </header>
+  <header class="bg-ccc p-3 rounded-3">
     <div>
-        <table class="table table-dark table-striped table-hover rounded-3">
-            <thead>
-                <tr>
-                    <th scope="col">ID</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">City</th>
-                    <th scope="col">Avatar</th>
-                </tr>
-            </thead>
-            <tbody id="tbody__user">
-
-            </tbody>
-        </table>
+      <a href="./home.html" target="_top">Home</a>
+      <a href="./list.html" target="_top" class="active">List</a>
+      <a href="./form.html" target="_top">Form</a>
     </div>
-    <!-- <div class="d-flex justify-content-around flex-wrap" id="div_content"></div> -->
-    <script src="/AEB32-Tungnt/bootstrap-5.2.3-dist/umd/popper.min.js"></script>
-    <script src="/AEB32-Tungnt/bootstrap-5.2.3-dist/js/bootstrap.min.js"></script>
-    <script src="./list.js"></script>
+  </header>
+  <div>
+    <table class="table table-dark table-striped table-hover rounded-3">
+      <thead>
+        <tr>
+          <th scope="col">ID</th>
+          <th scope="col">Name</th>
+          <th scope="col">City</th>
+          <th scope="col">Avatar</th>
+          <th>ABC</th>
+        </tr>
+      </thead>
+      <tbody id="tbody__user">
+
+      </tbody>
+    </table>
+  </div>
+  <!-- <div class="d-flex justify-content-around flex-wrap" id="div_content"></div> -->
+  <script src="/AEB32-Tungnt/bootstrap-5.2.3-dist/umd/popper.min.js"></script>
+  <script src="/AEB32-Tungnt/bootstrap-5.2.3-dist/js/bootstrap.min.js"></script>
+  <script src="./list.js"></script>
 </body>
 
 </html>
