--- a/WEB/form.html
+++ b/WEB/form.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>League of Legends</title>
     <link rel="stylesheet" href="../bootstrap-5.2.3-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./list.css">
+    <link rel="stylesheet" href="./common.css">
 </head>
 
 <body class="div_body">
     <header class="p-3 rounded-3">
-        <iframe src="./header.html" frameborder="0" class="h__55px w-100 rounded-3"></iframe>
+        <iframe src="./header.html" height="56px" frameborder="0" class="w-100 rounded-3"></iframe>
     </header>
     <div class="div_box3 div_container">
         <form class="row g-3 w-50 m-auto my-3" onsubmit="return false">
@@ -39,11 +39,9 @@
             </div>
         </form>
     </div>
-    <footer class="div_footer text-center fixed-bottom">
-        <a href="https://www.facebook.com/th4nhtun">Facebook người làm nè :D</a>
-    </footer>
     <script src="../bootstrap-5.2.3-dist/umd/popper.min.js"></script>
     <script src="../bootstrap-5.2.3-dist/js/bootstrap.min.js"></script>
+    <script src="./form.js"></script>
 </body>
 
 </html>
