--- a/WEB/home.html
+++ b/WEB/home.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>League of Legends</title>
     <link rel="stylesheet" href="../bootstrap-5.2.3-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./list.css">
+    <link rel="stylesheet" href="./common.css">
 </head>
 
 <body class="div_body">
     <header class="p-3 rounded-3">
-        <iframe src="./header.html" frameborder="0" class="h__55px w-100 rounded-3"></iframe>
+        <iframe src="./header.html" height="56px" frameborder="0" class="w-100 rounded-3"></iframe>
     </header>
     <img class="div_image" src="https://www.metasrc.com/assets/v/6.1.8/images/games/lol/lol_logo.png">
     <div class="div_random">
@@ -27,9 +27,6 @@
             placeholder="Search for a champion...">
     </div>
     <div class="d-flex justify-content-around flex-wrap rounded-1 div_container" id="div_card"></div>
-    <footer class="div_footer text-center fixed-bottom">
-        <a href="https://www.facebook.com/th4nhtun">Facebook người làm nè :D</a>
-    </footer>
     <script src="../bootstrap-5.2.3-dist/umd/popper.min.js"></script>
     <script src="../bootstrap-5.2.3-dist/js/bootstrap.min.js"></script>
     <script src="./home.js"></script>
