--- a/WEB/list.html
+++ b/WEB/list.html
@@ -7,25 +7,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>League of Legends</title>
     <link rel="stylesheet" href="../bootstrap-5.2.3-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./list.css">
+    <link rel="stylesheet" href="./common.css">
 </head>
 
 <body class="div_body">
     <header class="p-3 rounded-3">
-        <iframe src="./header.html" frameborder="0" class="h__55px w-100 rounded-3"></iframe>
+        <iframe src="./header.html" height="56px" frameborder="0" class="w-100 rounded-3"></iframe>
     </header>
     <div class="div_container">
         <div class="div_box text-white">
             <div>
                 <div>
-                    <div style="display: flex;">
+                    <div class="d-flex">
                         <div>
                             <a class="avatar" href="">
                             </a>
                         </div>
                         <div>
                             <h1 style="margin-left: 15px;">
-                                <span style="display: flex;">Aatrox Build
+                                <span class="d-flex">Aatrox Build
                                 </span>
                                 <span> Top Lane LoL
                                 </span>
@@ -36,23 +36,21 @@
             </div>
             <div>
                 <a href="">
-                    <img src="https://www.metasrc.com/assets/v/6.1.8/images/games/lol/5v5_icon.png"
-                        style="width: 20px;height: 20px;">
+                    <img src="https://www.metasrc.com/assets/v/6.1.8/images/games/lol/5v5_icon.png" class="div_src">
                     <span>5v5</span>
                 </a>
                 <a href="">
-                    <img src="https://www.metasrc.com/assets/v/6.1.8/images/games/lol/aram_icon.png"
-                        style="width: 20px;height: 20px;">
+                    <img src="https://www.metasrc.com/assets/v/6.1.8/images/games/lol/aram_icon.png" class="div_src">
                     <span>ARAM</span>
                 </a>
                 <a href="">
                     <img src="https://www.metasrc.com/assets/v/6.1.8/images/games/lol/special_active_icon.png"
-                        style="width: 20px;height: 20px;">
+                        class="div_src">
                     <span>URF</span>
                 </a>
             </div>
             <div>
-                <div style="display: flex; justify-content: space-between; padding: 9px;">
+                <div class="div_kda">
                     <span>
                         <strong>Tier: </strong>
                         <span>S+</span>
@@ -161,9 +159,6 @@
             </div>
         </div>
     </div>
-    <footer class="div_footer text-center fixed-bottom">
-        <a href="https://www.facebook.com/th4nhtun">Facebook người làm nè :D</a>
-    </footer>
     <script src="../bootstrap-5.2.3-dist/umd/popper.min.js"></script>
     <script src="../bootstrap-5.2.3-dist/js/bootstrap.min.js"></script>
 </body>
