--- a/WEB/home.html
+++ b/WEB/home.html
@@ -10,18 +10,11 @@
     <link rel="stylesheet" href="./common.css">
 </head>
 
-<body class="div_body">
+<body class="div_body1">
     <header class="p-3 rounded-3">
         <iframe src="./header.html" height="56px" frameborder="0" class="w-100 rounded-3"></iframe>
     </header>
     <img class="div_image" src="https://www.metasrc.com/assets/v/6.1.8/images/games/lol/lol_logo.png">
-    <div class="div_random">
-        <a class="div_a" href="./list.html">5v5</a>
-        <span>|</span>
-        <a class="div_a1" href="./list.html">ARAM</a>
-        <span>|</span>
-        <a class="div_a1" href="./list.html">URF</a>
-    </div>
     <div class="div_boxinput">
         <input class="div_input" type="search"
             placeholder="Search for a champion...">
