--- a/homework/sesson 03/basic1.html
+++ b/homework/sesson 03/basic1.html
@@ -12,6 +12,8 @@
             height: 200px;
             border: 3px solid #ccc;
             max-width: 500px;
+            justify-content: center;
+            align-items: center;
         }
 
         .text {
